fixed a bug that caused scrollbar be active when an alert is shown

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -16,6 +16,10 @@ body {
     min-height: 100vh;
 }
 
+.hide-scrollbar {
+    overflow: hidden;
+}
+
 img {
     image-rendering: optimizeSpeed;
     image-rendering: -moz-crisp-edges;
